feat: add 3 section of layout

--- a/index.html
+++ b/index.html
@@ -5,5 +5,268 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="wrapper header__wrapper">
+        <div>
+          <div class="lang"></div>
+          <div class="voka">
+            <a href="#"><img src="./src/img/social-link/voka.png" alt="" /></a>
+          </div>
+          <div class="">
+            <a href="tel: +375 (44) 755-01-01"
+              >+375 (44) 755-01-01<img
+                src="./src/img/social-link/A1.png"
+                alt="A1" /><img
+                src="./src/img/social-link/phone.png"
+                alt="phone" /><img
+                src="./src/img/social-link/viber.png"
+                alt="viber"
+            /></a>
+            <a href="tel:+375 (29) 550-01-01"
+              >+375 (29) 550-01-01
+              <img src="./src/img/social-link/mts.png" alt="mts"
+            /></a>
+          </div>
+        </div>
+        <div>
+          <div class="logo"><img src="./src/img/Logo.png" alt="logo" /></div>
+          <nav class="navigation">
+            <ul>
+              <li class="navigation__item">Главная</li>
+              <li class="navigation__item">О нас</li>
+              <li class="navigation__item">Услуги</li>
+              <li class="navigation__item">Тарифы</li>
+              <li class="navigation__item">Инфоцентр</li>
+              <li class="navigation__item">Контакты</li>
+              <li class="navigation__item">
+                <img src="./src/img/ather/search.png" alt="search" />
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <main>
+      <!-- Slider top -->
+      <section class="slider-top">
+        <div class="wrapper slider-top__wrapper">
+          <div class="card">
+            <div class="card__item">
+              <img src="./src/img/ico/protection.png" alt="protection" />
+              <p>Надежная защита</p>
+            </div>
+            <div class="card__item">
+              <img src="./src/img/ico/premium.png" alt="premium" />
+              <p>Безупречная репутация</p>
+            </div>
+            <div class="card__item">
+              <img src="./src/img/ico/result.png" alt="result" />
+              <p>Ориентированность на результат</p>
+            </div>
+            <div class="card__item">
+              <img
+                src="./src/img/ico/protected-data.png"
+                alt="protected-data"
+              />
+              <p>Абсолютная конфиденциальность</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Join -->
+      <section class="promo">
+        <div class="wrapper promo__wrapper">
+          <div class="join">
+            <div class="join__text">
+              <h2 class="joint__title">
+                Юридическое сопровождение бизнеса от «МК-Правовые технологии»
+              </h2>
+              <p class="join__text">
+                Главный принцип нашей работы - качество. Постоянно следовать ему
+                помогает сплоченная команда талантливых и энергичных
+                сотрудников, способных сообща заниматься сложными проектами,
+                никогда не допуская сбоев в работе.
+              </p>
+              <p class="join__text">
+                Мы обеспечиваем максимальный уровень профессионального
+                обслуживания, который можно ожидать от крупной юридической
+                фирмы.
+              </p>
+              <p class="join__text">
+                Нашу фирму отличают яркая индивидуальность и следование модели
+                эффективного юридического обслуживания. Благодаря
+                профессиональной гибкости мы находим творческие решения как
+                обычных вопросов, так и неординарных проблем, возникающих у
+                наших клиентов.
+              </p>
+              <p class="join__text">
+                Все наши рекомендации основаны на глубоких академических знаниях
+                и опыте практического применения в хозяйственном праве.
+              </p>
+            </div>
+            <div class="join__img">
+              <img src="./src/img/ather/stairis.png" alt="stairis" />
+            </div>
+          </div>
+          <div class="our-work">
+            <h2 class="our-work__title">Основные направления деятельности</h2>
+            <div class="our-work__content">
+              <div class="our-work__card">
+                <div class="our-work__card-content">
+                  <h5 class="our-work__card-title">Взыскание долгов</h5>
+                  <p><a href="#">Подробнее</a></p>
+                </div>
+                <div>
+                  <img src="./src/img/ico-small/dept-money.png" alt="money" />
+                </div>
+              </div>
+              <div class="our-work__card">
+                <div class="our-work__card-content">
+                  <h5 class="our-work__card-title">Реорганизация бизнеса</h5>
+                  <p><a href="#">Подробнее</a></p>
+                </div>
+                <div>
+                  <img
+                    src="./src/img/ico-small/reorganize-diagram.png"
+                    alt="diagram"
+                  />
+                </div>
+              </div>
+              <div class="our-work__card">
+                <div class="our-work__card-content">
+                  <h5 class="our-work__card-title">Продажа бизнеса</h5>
+                  <p><a href="#">Подробнее</a></p>
+                </div>
+                <div>
+                  <img
+                    src="./src/img/ico-small/price-ticket.png"
+                    alt="price-ticket"
+                  />
+                </div>
+              </div>
+              <div class="our-work__card">
+                <div class="our-work__card-content">
+                  <h5 class="our-work__card-title">Юридические консультации</h5>
+                  <p><a href="#">Подробнее</a></p>
+                </div>
+                <div>
+                  <img src="./src/img/ico-small/support.png" alt="support" />
+                </div>
+              </div>
+              <div class="our-work__card">
+                <div class="our-work__card-content">
+                  <h5 class="our-work__card-title">Ликвидация организаций</h5>
+                  <p><a href="#">Подробнее</a></p>
+                </div>
+                <div>
+                  <img
+                    src="./src/img/ico-small/liquidation-box-down.png"
+                    alt="box"
+                  />
+                </div>
+              </div>
+              <div class="our-work__card">
+                <div class="our-work__card-content">
+                  <h5 class="our-work__card-title">Разработка договоров</h5>
+                  <p><a href="#">Подробнее</a></p>
+                </div>
+                <div>
+                  <img
+                    src="./src/img/ico-small/documents.png"
+                    alt="documents"
+                  />
+                </div>
+              </div>
+              <div class="our-work__card">
+                <div class="our-work__card-content">
+                  <h5 class="our-work__card-title">Регистрация бизнеса</h5>
+                  <p><a href="#">Подробнее</a></p>
+                </div>
+                <div>
+                  <img src="./src/img/ico-small/stamp.png" alt="stamp" />
+                </div>
+              </div>
+              <div class="our-work__card">
+                <div class="our-work__card-content">
+                  <h5 class="our-work__card-title">Юридический аутсорсинг</h5>
+                  <p><a href="#">Подробнее</a></p>
+                </div>
+                <div>
+                  <img src="./src/img/ico-small/outsource-cup.png" alt="cup" />
+                </div>
+              </div>
+              <div class="our-work__card">
+                <div class="our-work__card-content">
+                  <h5 class="our-work__card-title">
+                    Аттестация в строительстве
+                  </h5>
+                  <p><a href="#">Подробнее</a></p>
+                </div>
+                <div>
+                  <img
+                    src="./src/img/ico-small/dollar-house.png"
+                    alt="dollar-house"
+                  />
+                </div>
+              </div>
+            </div>
+            <button>Все услуги</button>
+          </div>
+          <div class="direction">
+            <div class="direction__content">
+              <h5 class="direction__title">
+                Основные направления деятельности
+              </h5>
+              <p class="direction__text">
+                Основной принцип нашей работы – максимальная открытость и
+                доверительные отношения с каждым клиентом, с тем чтобы от начала
+                и до конца совместной работы, не возникало никакого
+                недопонимания. Мы ставим целью не только привлечение новых
+                клиентов, но и поддержание длительных партнерских отношений с
+                клиентами, которые уже воспользовались нашими услугами.
+              </p>
+              <p class="direction__text">
+                Быстрота анализа и профессиональных действий наших юристов
+                обеспечивают успешное решение, казалось бы, неразрешимых
+                вопросов. Богатые знания и солидный опыт позволяют нам оказывать
+                комплексную правовую помощь в ситуациях любой сложности.
+              </p>
+            </div>
+            <div class="direction__slider"></div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Review -->
+      <section class="review">
+        <div class="wrapper review__wrapper">
+          <h2 class="review__title">Отзывы наших партнеров</h2>
+          <div class="review__slider"></div>
+          <button></button>
+          <div class="review__footer">
+            <div class="review__footer-content">
+              <p>
+                Оказываем юридические услуги юридическим лицам и индивидуальным
+                предпринимателям. Специализируемся в области хозяйственного
+                права, работаем на всей территории Республики Беларусь, а также
+                за ее пределами, с бизнесом любого масштаба.
+              </p>
+              <button>Наши партнеры</button>
+            </div>
+            <div class="review__partner">
+              <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
