feat: add basic layout

--- a/index.html
+++ b/index.html
@@ -257,12 +257,364 @@
             </div>
             <div class="review__partner">
               <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><img src="./src/img/partners/BauAr.png" alt="" /></li>
+                <li><img src="./src/img/partners/titan.png" alt="" /></li>
+                <li><img src="./src/img/partners/favorit.png" alt="" /></li>
+                <li><img src="./src/img/partners/Alfa.png" alt="" /></li>
+                <li><img src="./src/img/partners/IBA.png" alt="" /></li>
               </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="service">
+        <div class="wrapper service__wrappepr">
+          <div class="service__description">
+            <div class="description">
+              <h4 class="description__title">Просто объясним сложные вещи</h4>
+              <p class="description__text">
+                В своей практике, мы дотошно соблюдаем законность, учитываем
+                сложившуюся правовую практику и правила юридической этики. Мы
+                считаем, что в поддержке бизнеса важно учитывать конкретные
+                проблемы клиента и строить сотрудничество по принципу
+                тщательного изучения всех нюансов возникшей ситуации. Всегда
+                честны и объективны.
+              </p>
+            </div>
+            <div>
+              <h4 class="description__title">
+                Надежно защитим права и интересы
+              </h4>
+              <p class="description__text">
+                Заказав комплексные юридические услуги в ООО «МК-Правовые
+                технологии», можно больше не платить зарплату штатному юристу,
+                страховые отчисления и налоги с его доходов. Можно не оплачивать
+                отпуск, больничные и не беспокоиться о нахождении работника на
+                рабочем месте в нужный момент.
+              </p>
+            </div>
+            <div>
+              <h4 class="description__title">
+                Вы платите только за результат!
+              </h4>
+              <p class="description__text">
+                В своей практике, мы дотошно соблюдаем законность, учитываем
+                сложившуюся правовую практику и правила юридической этики. Мы
+                считаем, что в поддержке бизнеса важно учитывать конкретные
+                проблемы клиента и строить сотрудничество по принципу
+                тщательного изучения всех нюансов возникшей ситуации. Всегда
+                честны и объективны.
+              </p>
+            </div>
+          </div>
+          <div><img src="./src/img/ather/pen.png" alt="" /></div>
+          <div class="our__services">
+            <div>
+              <h5>Регистрации ИП и юрлиц</h5>
+              <a href="#">Подробнее</a>
+            </div>
+            <div>
+              <h5>Ликвидация, реорганизация и продажа бизнеса</h5>
+              <a href="#">Подробнее</a>
+            </div>
+            <div>
+              <h5>Взыскание дебиторской задолженности</h5>
+              <a href="#"></a>Подробнее
+            </div>
+            <div>
+              <h5>Письменные и устные консультации</h5>
+              <a href="#">Подробнее</a>
+            </div>
+            <div>
+              <h5>Разработка уставных документов и внесение изменений в них</h5>
+              <a href="#">Подробнее</a>
+            </div>
+            <div>
+              <h5>Ведение переговоров</h5>
+              <a href="#">Подробнее</a>
+            </div>
+            <div>
+              <h5>Комплексное сопровождение бизнеса</h5>
+              <a href="#">Подробнее</a>
+            </div>
+            <div>
+              <h5>Сопровождение деловых сделок</h5>
+              <a href="#">Подробнее</a>
+            </div>
+            <div>
+              <h5>Лицензирование бизнеса</h5>
+              <a href="#"></a>Подробнее
+            </div>
+            <div>
+              <h5>Решение правовых споров</h5>
+              <a href="#">Подробнее</a>
+            </div>
+          </div>
+          <div>
+            <p>
+              Оказание юридических услуг юридическим лицам и индивидуальным
+              предпринимателям – наша работа. Среди собственников бизнеса
+              принято считать, что прочитать закон в Интернете и применить его
+              на практике - это одно и тоже. Основываясь на этом убеждении, они
+              часто отказываются от профессиональной помощи. Практика же
+              показывает, что только опытный юрист может правильно разобраться в
+              правовых тонкостях, своевременно предотвратить ложные шаги и
+              ускорить получение результата.
+            </p>
+            <button>Все услуги</button>
+          </div>
+        </div>
+      </section>
+      <!-- Pritection -->
+      <section class="protection">
+        <div class="wrapper protection__wrapper">
+          <div class="protection__content">
+            <div class="protection__description">
+              <h2 class="protection__title">Почему нам доверяют</h2>
+              <p class="protection__text">
+                Прозрачность и открытость для клиентов – наш принцип, который с
+                самого начала исключает любые недопонимания. Мы тщательно
+                продумали работу каждого юриста внутри коллектива, что
+                обеспечивает высокое качество юридических услуг компании.
+              </p>
+            </div>
+            <div class="protection__list">
+              <ul>
+                <li>безупречная репутация</li>
+                <li>абсолютная конфиденциальность</li>
+                <li>внимание к каждому клиенту</li>
+                <li>успешный опыт решения нестандартных вопросов</li>
+              </ul>
+            </div>
+          </div>
+          <div>
+            <div class="protection__description">
+              <h2 class="protection__title">Что получает клиент</h2>
+              <p class="protection__text">
+                Юристы нашей компании готовы дать четкие, основанные на фактах,
+                консультации, касающиеся и «типовой», и нестандартной ситуации,
+                опираясь на сложившуюся служебную практику и многолетний опыт.
+                Мы объективно оцениваем риски и тщательно анализируем каждый
+                случай.
+              </p>
+            </div>
+            <div class="protection__list">
+              <ul>
+                <li>надежная защита бизнеса</li>
+                <li>актуальная правовая помощь</li>
+                <li>своевременная оценка рисков</li>
+                <li>компетентное решение правовых вопросов</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Advantage -->
+
+      <section class="advantage">
+        <div class="wrapper advantage__wrapper">
+          <h2 class="advantage__title">Наши преимущества</h2>
+          <div>
+            <div class="advantage__card">
+              <img src="./src/img/ico/license.png" alt="" />
+              <p>Лицензия на оказание юридических услуг</p>
+            </div>
+            <div class="advantage__card">
+              <img src="./src/img/ico/team.png" alt="" />
+              <p>Опытные сотрудники</p>
+            </div>
+            <div class="advantage__card">
+              <img src="./src/img/ico/communication.png" alt="" />
+              <p>
+                Коммуникативные навыки – без труда открываем любые двери и
+                быстро решаем нужные вопросы
+              </p>
+            </div>
+            <div class="advantage__card">
+              <img src="./src/img/ico/edit-writing.png" alt="" />
+              <p>Скрупулезный поход к ведению документаци</p>
+            </div>
+          </div>
+          <div class="advantage__footer">
+            <p>
+              Юристы нашей компании готовы дать четкие, основанные на фактах,
+              консультации, касающиеся и «типовой», и нестандартной ситуации,
+              опираясь на сложившуюся служебную практику и многолетний опыт. Мы
+              объективно оцениваем риски и тщательно анализируем каждый случай.
+            </p>
+          </div>
+          <div class="cooperations">
+            <div class="cooperations__content">
+              <h2 class="cooperations__title">Организация сотрудничества</h2>
+              <div>
+                <div><img src="./src/img/ather/number1.png" alt="" /></div>
+                <div>
+                  Установив контакт с нашим сотрудником, Вы оговорите нюансы
+                  предмета обсуждения и согласуете личную встречу.
+                </div>
+              </div>
+              <div>
+                <div><img src="./src/img/ather/number2.png" alt="" /></div>
+                <div>
+                  Юрист изучит документы, необходимые для разработки стратегии
+                  решения возникшей ситуации. И заключит договор.
+                </div>
+              </div>
+              <div class="cooperation__content__footer">
+                Также в нашей компании возможна удаленная форма обслуживания с
+                оказанием полного комплекса юридических услуг в РБ через
+                современные средства связи и мессенджеры.
+              </div>
+            </div>
+            <div class="cooperations__form"></div>
+          </div>
+          <div class="price">
+            <h2 class="price__title">Стоимость юридических услуг в Минске</h2>
+            <p class="price__text">
+              Стоимость услуг формируется согласно тарифам, установленным в
+              компании и в зависимости от времени, затраченного юристом на
+              разрешение возникшей ситуации. Принцип прозрачности делает наши
+              цены обоснованными и понятными для клиента.
+            </p>
+            <button>Тарифы</button>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact -->
+
+      <section class="contact">
+        <div class="wrapper contact__wrapper">
+          <div>
+            <h5>ООО “МК-ПРАВОВЫЕ ТЕХНОЛОГИИ”</h5>
+            <p>УНП <span>192710862</span></p>
+            <p>Наш рейтинг <span>5 из 5 (15 отзывов)</span></p>
+            <ul>
+              <li>
+                <a href=""><img src="./src/img/social-link/vk.png" alt="" /></a>
+              </li>
+              <li>
+                <a href=""><img src="./src/img/social-link/ok.png" alt="" /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./src/img/social-link/linkidin.png" alt=""
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./src/img/social-link/insta.png" alt=""
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./src/img/social-link/youtube.png" alt=""
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="./src/img/social-link/facebook.png" alt=""
+                /></a>
+              </li>
+            </ul>
+          </div>
+          <div class="our__office">
+            <p>Наши офисы</p>
+            <div class="contact__info">
+              <p class="contact__city">Контакты в Минске</p>
+              <ul>
+                <li>
+                  <a href="tel:+375 (44) 755-01-01">+375 (44) 755-01-01</a>
+                </li>
+                <li>
+                  <a href="tel:+375 (29) 550-01-01">+375 (29) 550-01-01</a>
+                </li>
+                <li>
+                  <a href="tel:+375 (17) 374-40-60">+375 (17) 374-40-60</a>
+                </li>
+              </ul>
+              <p class="contact__adress">Адрес</p>
+              <p>г. Минск, ул. Широкая, д. 3, пом. 146, оф. 4</p>
+              <p>Телефон для связи резидентов Российской Федерации</p>
+              <p>
+                whatsapp <a href="tel:+7 (989) 166 24 00">+7 (989) 166 24 00</a>
+              </p>
+              <p>
+                <a href="mailto:info@jurisprudent.by"></a>info@jurisprudent.by
+              </p>
+            </div>
+            <div class="contact__info">
+              <div>
+                <p class="contact__sity">Отдел в Могилеве</p>
+                <p class="contact__adress">Адрес</p>
+                <p>г. Могилев, ул. Космонавтов, д. 19, оф. 507</p>
+                <p>
+                  <a href="mailto:mogilev@jurisprudent.by"></a
+                  >mogilev@jurisprudent.by
+                </p>
+              </div>
+              <div>
+                <p class="contact__sity">Отдел в Бресте</p>
+                <p class="contact__adress">Адрес</p>
+                <p>г. Брест, б-р Шевченко, д. 4, оф. 401</p>
+                <p>
+                  <a href="mailto:brest@jurisprudent.by"
+                    >brest@jurisprudent.by</a
+                  >
+                </p>
+              </div>
+              <div>
+                <p class="contact__sity">Отдел в Витебске</p>
+                <p class="contact__adress">Адрес</p>
+                <p>г. Витебск, ул.Гоголя, д. 14, оф. 614</p>
+                <p>
+                  <a href="mailto:vitebsk@jurisprudent.by"
+                    >vitebsk@jurisprudent.by</a
+                  >
+                </p>
+              </div>
+            </div>
+            <div class="contact__info">
+              <div>
+                <p class="contact__sity">Отдел в Гродно</p>
+                <p class="contact__adress">Адрес</p>
+                <p>г. Гродно, ул. Карла Маркса, д. 31-1, оф. 1010</p>
+                <p>
+                  <a href="mailto:grodno@jurisprudent.by"
+                    >grodno@jurisprudent.by</a
+                  >
+                </p>
+              </div>
+              <div>
+                <p class="contact__sity">Отдел в Гомеле</p>
+                <p class="contact__adress">Адрес</p>
+                <p>г. Гомель, пр. Ленина, д. 10, оф. 901</p>
+                <p>
+                  <a href="mailto:gomel@jurisprudent.by"
+                    >gomel@jurisprudent.by</a
+                  >
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="work__time">
+            <p>Время работы</p>
+            <div>
+              <p class="work__time-title">Прием посетителей</p>
+              <p class="work__time-text">
+                Ежедневно с 8.00 до 19.00 Выходной: суббота - воскресенье.
+              </p>
+            </div>
+            <div>
+              <p class="work__time-title">Прием звонков</p>
+              <p class="work__time-text">
+                Ежедневно с 8.00 до 22.00 Без выходных
+              </p>
+            </div>
+            <div>
+              <p class="work__time-title">Онлайн консультант</p>
+              <p class="work__time-text">Круглосуточно 24/7 Без выходных</p>
             </div>
           </div>
         </div>
