--- a/index.html
+++ b/index.html
@@ -3,42 +3,66 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/sass/style.css" />
     <title>Document</title>
   </head>
   <body>
     <header class="header">
       <div class="wrapper header__wrapper">
-        <div>
-          <div class="lang"></div>
+        <div class="header__info">
+          <div class="lang">
+            <label for="select">Язык</label>
+            <select name="" id="select" class="form-control">
+              <option value="">Русский</option>
+              <option value="">English</option>
+            </select>
+          </div>
           <div class="voka">
             <a href="#"><img src="./src/img/social-link/voka.png" alt="" /></a>
           </div>
-          <div class="">
-            <a href="tel: +375 (44) 755-01-01"
-              >+375 (44) 755-01-01<img
-                src="./src/img/social-link/A1.png"
-                alt="A1" /><img
-                src="./src/img/social-link/phone.png"
-                alt="phone" /><img
-                src="./src/img/social-link/viber.png"
-                alt="viber"
-            /></a>
-            <a href="tel:+375 (29) 550-01-01"
-              >+375 (29) 550-01-01
-              <img src="./src/img/social-link/mts.png" alt="mts"
-            /></a>
+          <div class="header__contact">
+            <div class="header__contact-item">
+              <div>
+                <a href="tel: +375 (44) 755-01-01">+375 (44) 755-01-01</a>
+              </div>
+              <div>
+                <a href="tel: +375 (44) 755-01-01"
+                  ><img src="./src/img/social-link/A1.png" alt="A1"
+                /></a>
+              </div>
+              <div>
+                <a href="index.html"
+                  ><img src="./src/img/social-link/phone.png" alt="phone"
+                /></a>
+              </div>
+              <div>
+                <a href="tel: +375 (44) 755-01-01">
+                  <img src="./src/img/social-link/viber.png" alt="viber"
+                /></a>
+              </div>
+            </div>
+            <div class="header__contact-item">
+              <div>
+                <a href="tel:+375 (29) 550-01-01">+375 (29) 550-01-01</a>
+              </div>
+              <div>
+                <a href="tel:+375 (29) 550-01-01"
+                  ><img src="./src/img/social-link/mts.png" alt="mts"
+                /></a>
+              </div>
+            </div>
           </div>
         </div>
-        <div>
+        <div class="header__nav">
           <div class="logo"><img src="./src/img/Logo.png" alt="logo" /></div>
           <nav class="navigation">
-            <ul>
-              <li class="navigation__item">Главная</li>
-              <li class="navigation__item">О нас</li>
-              <li class="navigation__item">Услуги</li>
-              <li class="navigation__item">Тарифы</li>
-              <li class="navigation__item">Инфоцентр</li>
-              <li class="navigation__item">Контакты</li>
+            <ul class="navigation__list">
+              <li class="navigation__item"><a href="#">Главная</a></li>
+              <li class="navigation__item"><a href="#">О нас</a></li>
+              <li class="navigation__item"><a href="#">Услуги</a></li>
+              <li class="navigation__item"><a href="#">Тарифы</a></li>
+              <li class="navigation__item"><a href="#">Инфоцентр</a></li>
+              <li class="navigation__item"><a href="#">Контакты</a></li>
               <li class="navigation__item">
                 <img src="./src/img/ather/search.png" alt="search" />
               </li>
@@ -50,8 +74,110 @@
     <main>
       <!-- Slider top -->
       <section class="slider-top">
-        <div class="wrapper slider-top__wrapper">
-          <div class="card">
+        <!-- <div class="wrapper slider-top__wrapper"> -->
+        <div class="slider">
+          <div class="slider__item item1">
+            <div class="wrapper slider__wrapper">
+              <div>
+                <img class="slider__logo" src="./src/img/Logo.png" alt="" />
+              </div>
+              <div>
+                <h1 class="slider__title">
+                  Взыскание дебиторской задолженности
+                </h1>
+                <p class="slider__text">
+                  Индивидуальный подход и нацеленность на достижение результата
+                </p>
+              </div>
+              <button class="slider__button">Подробнее</button>
+              <div class="slider__arrow">
+                <a class="previous" onclick="previousSlide()"><img src="./src/img/slider-top/left-arrow.svg" alt=""></a>
+                <a class="next" onclick="nextSlide()"><img src="./src/img/slider-top/right-arrow.svg" alt=""></a>           
+              </div>
+            </div>
+          </div>
+            <div class="slider__item item2">
+              <div class="wrapper slider__wrapper">
+                <div>
+                  <img class="slider__logo" src="./src/img/Logo.png" alt="" />
+                </div>
+                <div>
+                  <h1 class="slider__title">
+                    Регистрация ООО
+                  </h1>
+                  <p class="slider__text">
+                    Гарантируем минимальные сроки регистрации под ключ 
+                  </p>
+                </div>
+                <button class="slider__button">Подробнее</button>
+                <div class="slider__arrow">
+                  <a class="previous" onclick="previousSlide()"><img src="./src/img/slider-top/left-arrow.svg" alt=""></a>
+                <a class="next" onclick="nextSlide()"><img src="./src/img/slider-top/right-arrow.svg" alt=""></a>           
+                </div>
+              </div>
+            </div>
+            <div class="slider__item item3">
+              <div class="wrapper slider__wrapper">
+                <div>
+                  <img class="slider__logo" src="./src/img/Logo.png" alt="" />
+                </div>
+                <div>
+                  <h1 class="slider__title">
+                    Ликвидация предприятия
+                  </h1>
+                  <p class="slider__text">
+                    Эффективное решение сложных задач
+                  </p>
+                </div>
+                <button class="slider__button">Подробнее</button>
+                <div class="slider__arrow">
+                  <a class="previous" onclick="previousSlide()"><img src="./src/img/slider-top/left-arrow.svg" alt=""></a>
+                <a class="next" onclick="nextSlide()"><img src="./src/img/slider-top/right-arrow.svg" alt=""></a>           
+                </div>
+              </div>
+            </div>
+            <div class="slider__item item4">
+              <div class="wrapper slider__wrapper">
+                <div>
+                  <img class="slider__logo" src="./src/img/Logo.png" alt="" />
+                </div>
+                <div>
+                  <h1 class="slider__title">
+                    Юридическая консультация
+                  </h1>
+                  <p class="slider__text">
+                    Детальные разъяснения вопросов по ведению бизнеса от профессионалов
+                  </p>
+                </div>
+                <button class="slider__button">Подробнее</button>
+                <div class="slider__arrow">
+                  <a class="previous" onclick="previousSlide()"><img src="./src/img/slider-top/left-arrow.svg" alt=""></a>
+                  <a class="next" onclick="nextSlide()"><img src="./src/img/slider-top/right-arrow.svg" alt=""></a>           
+                </div>
+              </div>
+            </div>
+            <div class="slider__item item5">
+              <div class="wrapper slider__wrapper">
+                <div>
+                  <img class="slider__logo" src="./src/img/Logo.png" alt="" />
+                </div>
+                <div>
+                  <h1 class="slider__title">
+                    Юридический аутсорсинг
+                  </h1>
+                  <p class="slider__text">
+                    Гарантия своевременности и качества услуг
+                  </p>
+                </div>
+                <button class="slider__button">Подробнее</button>
+                <div class="slider__arrow">
+                  <a class="previous" onclick="previousSlide()"><img src="./src/img/slider-top/left-arrow.svg" alt=""></a>
+                  <a class="next" onclick="nextSlide()"><img src="./src/img/slider-top/right-arrow.svg" alt=""></a>           
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="wrapper card">
             <div class="card__item">
               <img src="./src/img/ico/protection.png" alt="protection" />
               <p>Надежная защита</p>
@@ -621,4 +747,5 @@
       </section>
     </main>
   </body>
+  <script src="./src/index.js"></script>
 </html>
